--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,9 @@ name: GitHub CI
 on:
   pull_request:
   push:
+    branches-ignore:
+      - '**'
   schedule:
-    - cron: 0 0 * * 0
 
 defaults:
   run:
