--- a/.github/workflows/anthemghost.yml
+++ b/.github/workflows/anthemghost.yml
@@ -31,3 +31,12 @@ jobs:
           repository: austinanthem/thenest/gracklenest
           tags: latest, ${{ github.run_number }}
           path: ./3/alpine/
+      - name: Build and push Docker images to Azure Container Repo
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_ACCESSKEY }}
+          registry: austinanthem.azurecr.io
+          repository: anthem-ghost
+          tags: latest, ${{ github.run_number }}
+          path: ./3/alpine/
